--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,2 +1,4 @@
-<h1>StaticPages#home</h1>
-<p>Find me in app/views/static_pages/home.html.erb</p>
+<%= provide(:title, '') %>
+
+<h1>Flashcard</h1>
+<p>Spaced repetition for remembering shiz</p>
