--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,4 +1,7 @@
-<%= provide(:title, '') %>
+<div class="center hero-unit">
 
-<h1>Flashcard</h1>
-<p>Spaced repetition for remembering shiz</p>
+	<h1>Flashcard</h1>
+	<h2>Spaced repetition for remembering shiz</h2>
+
+	<%= link_to "Sign up now!", '#', class: "btn btn-large btn-primary" %>
+</div>
