--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -6,7 +6,7 @@
 			</section>
 			<section>
 				<div id="#deck-form">
-					<%= render 'shared/deck_form' %>
+					<%= render 'shared/deck_form_modal' %>
 				</div>
 			</section>
 		</aside>
