--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -153,17 +153,24 @@ input, textarea, select, .uneditable-input {
 }
 
 
-/* users index */
+/* users, cards index */
 
-.users {
+.users, .cards {
 	list-style: none;
 	margin: 0;
+	h4 {
+		display: inline;
+	}
 	li {
 		overflow: auto;
 		padding: 10px 0;
 		border-top: 1px solid $grayLighter;
+		&:first-child{
+			margin-top: 20px;
+		}
 		&:last-child {
 			border-bottom: 1px solid $grayLighter;
+			margin-bottom: 10px;
 		}
 	}
 }
