--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -65,6 +65,13 @@ p {
 
 /* header */
 
+.navbar-inner {
+  background-color: #000; /* background color will be black for all browsers */
+  background-image: none;
+  background-repeat: no-repeat;
+  filter: none;
+}
+
 #logo {
 	float: left;
 	margin-right: 10px;
@@ -175,9 +182,9 @@ input, textarea, select, .uneditable-input {
 	}
 }
 
-/* decks */
+/* deck & card accordions */
 
-#deck-accordion {
+.accordion {
 	.accordion-heading {
 		&:hover {
 			background: $grayLighter;
