--- a/app/views/decks/edit.html.erb
+++ b/app/views/decks/edit.html.erb
@@ -9,12 +9,12 @@
 		<% end %> 
 	</aside>
 	<div class="span9">
-		<% if @cards.any? %>
-			<ul class="cards">
+		<% if @deck.cards.any? %>
+			<div class="accordion" id="card-accordion">
 				<%= render @cards %>
-			</ul>
-			<%= will_paginate @cards %>
-		<% end %>
+			</div>
+		<%= will_paginate @cards %>
+<% end %>
 		<%= link_to "New card", new_card_path, class: "btn btn-large btn-primary" %>
 	</div>
 </div>
